--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,5 +24,7 @@ jobs:
     steps:
       - name: Pull Image from Docker Hub
         run: docker pull mwangi34/node-app:latest
+      - name: Delete old Container
+        run: docker rm -f nodejs-app-container
       - name: Run Docker Container
         run: docker run -d -p 5000:5000 --name nodejs-app-container -e MONGO_URI=`${{ secrets.MONGO_URI }}` mwangi34/node-app:latest
